objects/copado__Branch_Management_Permission__c.object
<CustomObject>
    <fields>
        <fullName>copado__Allow_Deployments__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Deployments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Environment__c</fullName>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Branch Management Permissisions</relationshipLabel>
        <relationshipName>Branch_Management_Permissisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Branch Management Permissisions</relationshipLabel>
        <relationshipName>Branch_Management_Permissisions</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>